# pattern-scaler

./: .gitignore  README.md  pyproject.toml  test-from-R.R
app/: main.py
app/utils/: functions.py
src/: main.py
src-deprecated/: main.py
src-deprecated/utils/: functions.py
src/utils/: functions.py
