[tool.poetry]
name = "pattern-scaler"
version = "0.1.0"
description = "A project to rescale sewing patterns and make them printable in A4 format"
authors = ["Emelie Hofland <emelie_hofland@hotmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
pillow = "^10.1.0"
reportlab = "^4.0.8"
pdf2image = "^1.17.0"
opencv-python = "^4.9.0.80"
pymupdf = "^1.23.15"
fastapi = "^0.109.0"
uvicorn = "^0.27.0.post1"
python-multipart = "^0.0.6"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
